--- a/N0.ipynb
+++ b/N0.ipynb
@@ -5,26 +5,16 @@
    "id": "3d5e6b22-4a96-43c5-9f71-d29b07d30cb0",
    "metadata": {},
    "source": [
-    "# Non Zero Sum Games"
+    "# Non-zero-sum Games"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab27f2c3-65e9-4c27-871b-a53467b9d8f7",
+   "cell_type": "markdown",
+   "id": "11ba20fe-f445-44b7-a9a0-46acfa2d9636",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Some text will go here: updates soon..."
+    "This page will be updated soon."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5bcb167-94f8-420f-b101-dff946fa35fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
